# az-scout-plugin-aks-placement-advisor

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/az_scout_aks_placement_advisor/: __init__.py  _aks_filter.py  chat_mode.py  models.py  routes.py  scoring.py  service.py  tools.py
src/az_scout_aks_placement_advisor/static/css/: aks-placement-advisor.css
src/az_scout_aks_placement_advisor/static/html/: aks-placement-advisor-tab.html
src/az_scout_aks_placement_advisor/static/js/: aks-placement-advisor-tab.js
tests/: test_aks_filter.py  test_aks_placement_advisor.py
