[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "az-scout-plugin-aks-placement-advisor"
dynamic = ["version"]
description = "AKS Placement Advisor plugin for az-scout — evaluates and recommends VM SKUs for AKS node pools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "az-scout>=2026.4.1",
    "fastapi",
]

[project.urls]
Homepage = "https://github.com/az-scout/az-scout-plugin-aks-placement-advisor"
Repository = "https://github.com/az-scout/az-scout-plugin-aks-placement-advisor"
Issues = "https://github.com/az-scout/az-scout-plugin-aks-placement-advisor/issues"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "httpx>=0.28",
]

[project.entry-points."az_scout.plugins"]
aks_placement_advisor = "az_scout_aks_placement_advisor:plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/az_scout_aks_placement_advisor"]

[tool.hatch.version]
source = "vcs"
raw-options.version_scheme = "guess-next-dev"
raw-options.local_scheme = "no-local-version"
raw-options.fallback_version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/az_scout_aks_placement_advisor/_version.py"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["src/az_scout_aks_placement_advisor/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
